--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <script src="https://use.fontawesome.com/a8a05e1b5d.js"></script>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108874765-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-108874765-1');
+    </script>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon.ico"/>
     <title>written-in-ink</title>
   </head>
   <body>
