--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <script src="https://use.fontawesome.com/a8a05e1b5d.js"></script>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Permanent+Marker" rel="stylesheet">    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108874765-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
